--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Exypnose</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Exypnose</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -238,10 +238,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Web Site & Web Server
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A Dynamic web-site for Direct English Ireland powered with scalable backend.  
                                 </div>
                             </div>
                         </div>
@@ -253,10 +253,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Website
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A Feature rish responsive Website for Cork School of Buisness. 
                                 </div>
                             </div>
                         </div>
@@ -268,10 +268,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Mobile Application
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    An Interactive mobile application for Android platform 
                                 </div>
                             </div>
                         </div>
@@ -321,7 +321,7 @@
                             </div>
                         </div>
                     </a>
-                </div>
+                </div> 
             </div>
         </div>
     </section>
@@ -329,8 +329,8 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <h2>Want to see more ?</h2>
+                <a href="#contact" class="btn btn-default btn-xl sr-button page-scroll">Request a demo</a>
             </div>
         </div>
     </aside>
