Fixed name of the company

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">We've got what you need!</h2>
                     <hr class="light">
-                    <p class="text-faded">Here at *** we mold technology into awesome digital experiences that get people excited about your brand. We deliver quality work with speed that is important for industry.</p>
+                    <p class="text-faded">Here at Exypnose we mold technology into awesome digital experiences that get people excited about your brand. We deliver quality work with speed that is important for industry.</p>
 
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
                 </div>
