Fix Spelling bug

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                     Website
                                 </div>
                                 <div class="project-name">
-                                    A Feature rish responsive Website for Cork School of Buisness. 
+                                    A Feature rich responsive Website for Cork School of Buisness. 
                                 </div>
                             </div>
                         </div>
