--- a/index.html
+++ b/index.html
@@ -283,10 +283,10 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Chrome Extension
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A Chrome Extension, to provide unique online shopping experience by updating the customers with hot deals and cashbacks 
                                 </div>
                             </div>
                         </div>
@@ -298,25 +298,25 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Mobile application
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    A Virtual Shopping experience on the fly at your tablet device powered with NFC and iBeacons 
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
+                    <a href="img/portfolio/fullsize/6.gif" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Games and Media
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    An Interactive and gamified media application, that measures the user engagment based on their Facial features, powered with High-End Gpu
                                 </div>
                             </div>
                         </div>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <p><a href="mailto:your-email@your-domain.com">info@exypnose.com</a></p>
                 </div>
             </div>
         </div>
